# Esmond

./: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/: ConditionalEscrow.sol  PayrollSchedulerFallback.sol  PayrollVault.sol  SubscriptionManager.sol
contracts/interfaces/: IERC20.sol  IPayrollScheduler.sol  IXcm.sol
contracts/mocks/: MockERC20.sol  MockIXcm.sol  ReentrantScheduler.sol
deployments/paseo/: addresses.json
frontend/: .env.example  cypress.config.ts  cypress.env.json  jest.config.ts  jest.env.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/__mocks__/: polkadot-api.ts  wagmi.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChainSelector.tsx  EmployeeForm.tsx  MilestoneCard.tsx  NavBar.tsx  PayrollRoster.tsx  Providers.tsx  StatCard.tsx  SubscriptionCard.tsx  TxStatusBadge.tsx  VaultBalance.tsx  WalletConnector.tsx
frontend/hooks/: useConditionalEscrow.ts  usePayrollVault.ts  useSubscriptionManager.ts
frontend/lib/: types.ts
rust-contracts/payroll-scheduler/: Cargo.toml
rust-contracts/payroll-scheduler/src/: lib.rs
scripts/deploy/: 01_register_mock_assets.ts  02_deploy_rust_scheduler.ts  03_deploy_solidity_contracts.ts  04_verify_deployment.ts  05_deploy_mock_erc20.ts  06_redeploy_vault_and_setup.ts  mint_tokens.ts  utils.ts
scripts/testnet/: 01_test_payroll_flow.ts  02_test_xcm_encoding.ts  03_test_escrow_flow.ts  04_test_subscription_flow.ts  11_defi_verification.ts  (+1 more)
(+40 files in other folders)
